Align status and statistics calculations (#2626)