@@ -14,11 +14,10 @@
  * limitations under the License.
  */
 
-package org.vividus;
+package org.vividus.results;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
@@ -26,11 +25,13 @@ import java.util.ArrayList;
 import java.util.EnumMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
 import java.util.stream.Stream;
 
-import com.google.common.eventbus.EventBus;
 import com.google.common.eventbus.Subscribe;
 
 import org.jbehave.core.model.Scenario;
@@ -41,26 +42,28 @@ import org.jbehave.core.steps.StepCreator.StepExecutionType;
 import org.jbehave.core.steps.Timing;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.vividus.AbstractReportControlStoryReporter;
 import org.vividus.context.ReportControlContext;
 import org.vividus.context.RunContext;
-import org.vividus.model.Failure;
-import org.vividus.model.Node;
-import org.vividus.model.NodeContext;
-import org.vividus.model.NodeType;
-import org.vividus.model.Statistic;
-import org.vividus.report.allure.event.StatusProvider;
-import org.vividus.report.allure.model.StatusPriority;
+import org.vividus.report.allure.model.Status;
+import org.vividus.results.model.Failure;
+import org.vividus.results.model.Node;
+import org.vividus.results.model.NodeContext;
+import org.vividus.results.model.NodeType;
+import org.vividus.results.model.Statistic;
 import org.vividus.softassert.event.AssertionFailedEvent;
 import org.vividus.testcontext.TestContext;
 import org.vividus.util.json.JsonUtils;
 
 @SuppressWarnings({ "PMD.GodClass", "PMD.ExcessiveImports" })
-public class StatisticsStoryReporter extends AbstractReportControlStoryReporter
+public class CollectingStatisticsStoryReporter extends AbstractReportControlStoryReporter implements ResultsProvider
 {
-    private static final Logger LOGGER = LoggerFactory.getLogger(StatisticsStoryReporter.class);
+    private static final Logger LOGGER = LoggerFactory.getLogger(CollectingStatisticsStoryReporter.class);
 
-    private static final Map<NodeType, Statistic> AGGREGATOR = new EnumMap<>(NodeType.class);
-    private static final FailuresBox FAILURES = new FailuresBox();
+    private final AtomicReference<Optional<Status>> status = new AtomicReference<>(Optional.empty());
+    private final AtomicBoolean recordStatus = new AtomicBoolean(true);
+    private final Map<NodeType, Statistic> statistics = new EnumMap<>(NodeType.class);
+    private final Optional<List<Failure>> failures;
 
     private final Map<Status, Consumer<Statistic>> mapper = Map.of(
             Status.PASSED, Statistic::incrementPassed,
@@ -69,45 +72,62 @@ public class StatisticsStoryReporter extends AbstractReportControlStoryReporter
             Status.PENDING, Statistic::incrementPending,
             Status.KNOWN_ISSUES_ONLY, Statistic::incrementKnownIssue,
             Status.SKIPPED, Statistic::incrementSkipped
-            );
+    );
 
     private final TestContext testContext;
     private final JsonUtils jsonUtils;
 
-    private boolean collectFailures;
-    private File statisticsFolder;
+    private final File statisticsFolder;
 
-    public StatisticsStoryReporter(ReportControlContext reportControlContext, RunContext runContext,
-            EventBus eventBus, TestContext testContext, JsonUtils jsonUtils)
+    public CollectingStatisticsStoryReporter(boolean collectFailures, File statisticsFolder,
+            ReportControlContext reportControlContext, RunContext runContext, TestContext testContext,
+            JsonUtils jsonUtils)
     {
         super(reportControlContext, runContext);
-        eventBus.register(this);
         this.testContext = testContext;
         this.jsonUtils = jsonUtils;
-        Stream.of(NodeType.values()).forEach(t -> AGGREGATOR.put(t, new Statistic()));
+        this.statisticsFolder = statisticsFolder;
+        Stream.of(NodeType.values()).forEach(t -> statistics.put(t, new Statistic()));
+        failures = collectFailures ? Optional.of(new ArrayList<>()) : Optional.empty();
     }
 
-    public void init()
+    @Override
+    public Map<NodeType, Statistic> getStatistics()
     {
-        if (collectFailures)
-        {
-            FAILURES.enable();
-        }
+        return Map.copyOf(statistics);
+    }
+
+    @Override
+    public Optional<List<Failure>> getFailures()
+    {
+        return failures.map(ArrayList::new);
+    }
+
+    @Override
+    public Optional<Status> getRunStatus()
+    {
+        return status.get();
     }
 
     @Subscribe
     public void onAssertionFailure(AssertionFailedEvent event)
     {
         addFailure(() -> event.getSoftAssertionError().getError().getMessage());
-        updateStepStatus(Status.from(StatusPriority.from(event)));
+        updateStepStatus(Status.from(event));
     }
 
     private void addFailure(Supplier<String> message)
     {
-        if (collectFailures)
-        {
-            FAILURES.add(Failure.from(getRunContext().getRunningStory(), message.get()));
-        }
+        failures.ifPresent(
+                f -> f.add(Failure.from(getRunContext().getRunningStory(), message.get()))
+        );
+    }
+
+    @Override
+    public void beforeStoriesSteps(Stage stage)
+    {
+        recordStatus.set(false);
+        super.beforeStoriesSteps(stage);
     }
 
     @Override
@@ -121,6 +141,7 @@ public class StatisticsStoryReporter extends AbstractReportControlStoryReporter
         {
             testContext.put(NodeContext.class, new NodeContext(new Node(NodeType.STORY)));
         }
+        super.beforeStory(story, givenStory);
     }
 
     @Override
@@ -131,11 +152,20 @@ public class StatisticsStoryReporter extends AbstractReportControlStoryReporter
         {
             node.setHasChildren(true);
         }
+        super.beforeScenario(scenario);
+    }
+
+    @Override
+    public void scenarioExcluded(Scenario scenario, String filter)
+    {
+        changeStatus(Status.SKIPPED);
+        super.scenarioExcluded(scenario, filter);
     }
 
     @Override
     public void afterScenario(Timing timing)
     {
+        super.afterScenario(timing);
         endNode();
     }
 
@@ -160,65 +190,80 @@ public class StatisticsStoryReporter extends AbstractReportControlStoryReporter
                 startNode(NodeType.STEP);
             }
         });
+        super.beforeStep(step);
     }
 
     @Override
     public void successful(String step)
     {
         perform(() -> endStep(Status.PASSED));
+        changeStatus(Status.PASSED);
+        super.successful(step);
     }
 
     @Override
     public void ignorable(String step)
     {
         endStep(Status.SKIPPED);
+        changeStatus(Status.SKIPPED);
+        super.ignorable(step);
     }
 
     @Override
     public void pending(String step)
     {
         endStep(Status.PENDING);
+        changeStatus(Status.PENDING);
+        super.pending(step);
     }
 
     @Override
     public void notPerformed(String step)
     {
         endStep(Status.SKIPPED);
+        changeStatus(Status.SKIPPED);
+        super.notPerformed(step);
     }
 
     @Override
     public void failed(String step, Throwable throwable)
     {
+        Status stepStatus = Status.from(throwable);
         perform(() ->
         {
-            Status status = Status.from(StatusPriority.from(StatusProvider.getStatus(throwable)));
-            if (status == Status.BROKEN)
+            if (stepStatus == Status.BROKEN)
             {
                 addFailure(() -> throwable.getCause().toString());
             }
-            endStep(status);
+            endStep(stepStatus);
         });
+        changeStatus(stepStatus);
+        super.failed(step, throwable);
     }
 
     @Override
     public void afterStoriesSteps(Stage stage)
     {
+        super.afterStoriesSteps(stage);
+        recordStatus.set(true);
         if (stage == Stage.AFTER)
         {
+            String targetFileName = "statistics.json";
             try
             {
                 Files.createDirectories(statisticsFolder.toPath());
-                Path statistics = statisticsFolder.toPath().resolve("statistics.json");
-                String results = jsonUtils.toPrettyJson(AGGREGATOR);
-                Files.write(statistics, results.getBytes(StandardCharsets.UTF_8), StandardOpenOption.CREATE,
+                Path statisticsFilePath = statisticsFolder.toPath().resolve(targetFileName);
+                String results = jsonUtils.toPrettyJson(this.statistics);
+                Files.writeString(statisticsFilePath, results, StandardOpenOption.CREATE,
                         StandardOpenOption.TRUNCATE_EXISTING);
             }
             catch (IOException e)
             {
                 LOGGER.atDebug()
-                      .addArgument(statisticsFolder::getAbsoluteFile)
-                      .setCause(e)
-                      .log("Unable to write statistics.json into folder: {}");
+                       .addArgument(targetFileName)
+                       .addArgument(statisticsFolder::getAbsoluteFile)
+                       .setCause(e)
+                       .log("Unable to write {} into folder: {}");
             }
         }
     }
@@ -255,13 +300,13 @@ public class StatisticsStoryReporter extends AbstractReportControlStoryReporter
         currentNode.getChildren().stream()
                           .reduce((l, r) -> l.getStatus().getPriority() < r.getStatus().getPriority() ? l : r)
                           .map(Node::getStatus)
-                          .ifPresent(status -> updateNodeStatus(currentNode, status));
+                          .ifPresent(newStatus -> updateNodeStatus(currentNode, newStatus));
 
         // Skip statistics increment for "wrapping" steps: composite steps and steps executing nested steps are
         // considered as containers (no business logic), thus they are not counted in the overall statistics
         if (currentNode.getType() != NodeType.STEP || currentNode.getChildren().isEmpty())
         {
-            Statistic targetStatisticsCategory = AGGREGATOR.get(currentNode.getType());
+            Statistic targetStatisticsCategory = statistics.get(currentNode.getType());
             mapper.get(currentNode.getStatus()).accept(targetStatisticsCategory);
         }
 
@@ -281,46 +326,14 @@ public class StatisticsStoryReporter extends AbstractReportControlStoryReporter
         return testContext.get(NodeContext.class);
     }
 
-    public static Map<NodeType, Statistic> getStatistics()
+    private void changeStatus(Status newStatus)
     {
-        return Map.copyOf(AGGREGATOR);
-    }
-
-    public static List<Failure> getFailures()
-    {
-        return FAILURES.getFailures();
-    }
-
-    public void setStatisticsFolder(File statisticsFolder)
-    {
-        this.statisticsFolder = statisticsFolder;
-    }
-
-    public void setCollectFailures(boolean collectFailures)
-    {
-        this.collectFailures = collectFailures;
-    }
-
-    private static final class FailuresBox
-    {
-        private static final List<Failure> FAILURES = new ArrayList<>();
-
-        private boolean enabled;
-
-        private void add(Failure failure)
+        if (recordStatus.get())
         {
-            FAILURES.add(failure);
-        }
-
-        @SuppressWarnings("NoNullForCollectionReturn")
-        private List<Failure> getFailures()
-        {
-            return enabled ? new ArrayList<>(FAILURES) : null;
-        }
-
-        private void enable()
-        {
-            enabled = true;
+            status.updateAndGet(
+                    currentStatus -> currentStatus.filter(s -> s.getPriority() <= newStatus.getPriority())
+                                                  .or(() -> Optional.of(newStatus))
+            );
         }
     }
 }
